# SCRAP

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
avilib/: Makefile.am  Makefile.in  avilib.c  avilib.h
config/: capture.conf
doc/: Doxyfile  Makefile.am  Makefile.in  scrap_man.t2t  scrap_user_guide.t2t
src/: Makefile.am  Makefile.in  common.c  enc_video.c  frame_queue.c  load_conf.c  log.c  main.c  motion.c  read_conf.c  sleep.c  v4l.c  write.c
src/include/: common.h  device.h  enc_video.h  frame_queue.h  load_conf.h  log.h  motion.h  read_conf.h  sleep.h  v4l.h  write.h
xpm/: font1.xpm  font2.xpm
